--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 
 body {
-    
+  
+   
 
 }
 
@@ -35,9 +36,7 @@ ul {
 
 }
 
-li {
-    fo
-}
+
 
 .hero {
     display: flex;
@@ -70,5 +69,91 @@ color: #e5e7eb;
 
 button {
    background-color: #3882F6;
+   width: 100px;
 }
 
+.body {
+    padding-top: 20px;
+     
+}
+
+.info-h {
+    display: flex;
+    justify-content: center;
+    font: 36px;
+    color: #1F2937;
+}
+
+.info {
+    display: flex;
+    justify-content: space-between;
+    padding-left: 150px;
+    padding-right: 150px;
+    gap: 50px;
+    text-align: center;
+}
+
+.info img {
+    height: 200px;
+    width: 200px;
+
+}
+
+.quote {
+    background-color: #e5e7eb;
+    font: 36px;
+    font-style: italic;
+    color: #1F2937;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    padding-right: 80px;
+    padding-left: 80px;
+}
+
+.section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px;
+    padding-left: 150px;
+    padding-right: 150px;
+}
+
+.sect {
+    background-color: #3882F6;
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+    width: 1000px;
+    margin-top: 2;
+    gap: 200px;
+    padding-bottom: 50px;
+}
+
+.order {
+display: flex;
+flex-direction: column;
+margin: 0;
+align-content: flex-start;
+}
+
+.sect p {
+
+    margin: 0%;
+}
+
+.sect h3 {
+    margin-bottom: 0;
+}
+
+.but1 {
+    display: flex;
+    align-items: flex-end;
+    width: 100px;
+}
+/*.quote p {
+    margin-top: 0;
+}*/
