--- a/style.css
+++ b/style.css
@@ -1,10 +1,3 @@
-
-body {
-  
-   
-
-}
-
 .header  {
     background-color: #1f2937;
     padding: 16px;
@@ -36,8 +29,6 @@ ul {
 
 }
 
-
-
 .hero {
     display: flex;
     justify-content: space-between;
@@ -55,10 +46,11 @@ ul {
     margin-bottom: 0;
 }
 
-
 .hero img {
-    width: 400px;
-    height: 150px;
+    width: auto;
+    height: auto;
+   max-width: 400px;
+    max-height: 150px;
     
 }
 
@@ -70,6 +62,7 @@ color: #e5e7eb;
 button {
    background-color: #3882F6;
    width: 100px;
+   border-radius: 14px;
 }
 
 .body {
@@ -101,16 +94,22 @@ button {
 
 .quote {
     background-color: #e5e7eb;
-    font: 36px;
+    padding: 50px;
+    padding-right: 150px;
+    padding-left: 150px;
+    
+}
+.quote-p {
+   font: 36px;
     font-style: italic;
     color: #1F2937;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-    padding-right: 80px;
-    padding-left: 80px;
+    text-align: center;
+
+}
+
+.quote-a {
+    text-align: right;
+    margin: 0;
 }
 
 .section {
@@ -154,6 +153,11 @@ align-content: flex-start;
     align-items: flex-end;
     width: 100px;
 }
-/*.quote p {
-    margin-top: 0;
-}*/
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1F2937;
+    color: #e5e7eb;
+}
